--- a/MLProject/conda.yaml
+++ b/MLProject/conda.yaml
@@ -1,14 +1,19 @@
 channels:
-- conda-forge
+  - conda-forge
+
 dependencies:
-- python=3.12.7
-- pip<=25.1.1
-- pip:
-  - mlflow==2.19.0
-  - cloudpickle==3.1.1
-  - numpy==2.2.6
-  - pandas==2.2.3
-  - scikit-learn==1.7.0
-  - scipy==1.15.3
-  - seaborn==0.12.2
+  - python=3.12.7
+  - pip<=25.1.1
+  - pip:
+    - mlflow==2.19.0
+    - dagshub==0.7.10
+    - joblib==1.3.2
+    - matplotlib==3.7.2
+    - seaborn==0.12.2
+    - pandas==2.2.3
+    - scikit-learn==1.7.0
+    - cloudpickle==3.1.1
+    - numpy==2.2.6
+    - scipy==1.15.3
+
 name: mlflow-env
