--- a/MLProject/conda.yaml
+++ b/MLProject/conda.yaml
@@ -6,14 +6,14 @@ dependencies:
   - pip<=25.1.1
   - pip:
     - mlflow==2.19.0
-    - dagshub==0.2.10  # Versi valid terbaru
+    - dagshub==0.2.10
     - joblib==1.3.2
     - matplotlib==3.7.2
     - seaborn==0.12.2
     - pandas==2.2.3
     - scikit-learn==1.7.0
     - cloudpickle==3.1.1
-    - numpy==1.21.0   # Update versi numpy agar kompatibel dengan matplotlib 3.7.2
+    - numpy>=1.21.5  # Updated for compatibility
     - scipy==1.15.3
 
 name: mlflow-env
