--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      # Setup Python via Miniconda & env setup
+      # Setup Python via Miniconda & environment setup with mamba
       - name: Setup Miniconda and environment
         uses: conda-incubator/setup-miniconda@v2
         with:
@@ -30,27 +30,47 @@ jobs:
           use-mamba: true
           cache: true
 
-      # Check environment details
+      # Check environment details for debugging
       - name: Check environment info
         run: |
           python --version
           conda list
           pip list
 
-      # Run MLflow project training
+      # Install / Upgrade pip and core python libraries forcibly via pip to ensure latest compatible
+      - name: Install / Upgrade pip and core packages
+        run: |
+          pip install --upgrade pip
+          pip install --force-reinstall numpy matplotlib seaborn
+
+      # Debug versions of important packages
+      - name: Debug package versions
+        run: |
+          python -c "import numpy; print('numpy:', numpy.__version__)"
+          python -c "import matplotlib; print('matplotlib:', matplotlib.__version__)"
+          python -c "import seaborn; print('seaborn:', seaborn.__version__)"
+          python -c "import mlflow; print('mlflow:', mlflow.__version__)"
+          python -c "import dagshub; print('dagshub:', dagshub.__version__)"
+
+      # Run MLflow project training with main script
       - name: Run MLflow Project with modelling.py
         shell: bash -l {0}
         run: |
           mlflow run MLProject -e train -P script_name=modelling.py
 
-      # Get latest MLflow run_id for possible later use
+      # Get latest MLflow run_id for reference if needed in later steps
       - name: Get latest MLflow run_id
         id: mlflow_run_id
         run: |
           RUN_ID=$(mlflow runs list --experiment-id 0 --order-by descending --max-results 1 --output json | jq -r '.[0].run_id')
           echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
 
-      # Upload artifacts 
+      # Optional install python dependencies for extra scripts or tools if needed
+      - name: Install additional Python dependencies if needed
+        run: |
+          pip install dagshub mlflow  # contoh, sesuaikan kebutuhan Anda
+
+      # Upload artifacts to GitHub (ubah ke Google Drive action jika mau)
       - name: Upload artifacts to GitHub
         uses: actions/upload-artifact@v4
         with:
@@ -67,19 +87,17 @@ jobs:
         run: |
           mlflow build-docker -p MLProject -t $DOCKER_REPOSITORY:latest
 
-      # Login Docker Hub
+      # Login to Docker Hub
       - name: Login to DockerHub
         run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
 
-      # Tag Docker Image (optional explicit tagging)
+      # Tag Docker Image with both latest and commit SHA
       - name: Tag Docker Image
         run: |
           docker tag $DOCKER_REPOSITORY:latest $DOCKER_REPOSITORY:$GITHUB_SHA
 
-      # Push Docker Image
+      # Push Docker Image tags
       - name: Push Docker Image
         run: |
           docker push $DOCKER_REPOSITORY:latest
           docker push $DOCKER_REPOSITORY:$GITHUB_SHA
-
-      # Post steps handled automatically by GitHub Actions (Post log etc)
