--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Install additional Python dependencies
         shell: bash -l {0}
-        run: pip install dagshub mlflow
+        run: pip install dagshub mlflow==2.8.0
 
       - name: Debug Conda Environment
         shell: bash -l {0}
@@ -65,13 +65,13 @@ jobs:
         run: |
           mlflow --version
           mlflow experiments create --help
-          mlflow experiments list --help
+          mlflow experiments search --help
 
       - name: Initialize MLflow Experiment
         shell: bash -l {0}
         run: |
           echo "Creating MLflow experiment if needed"
-          if ! mlflow experiments list | grep -q "Default Experiment"; then
+          if ! mlflow experiments search | grep -q "Default Experiment"; then
             mlflow experiments create --experiment-name "Default Experiment"
           else
             echo "Experiment 'Default Experiment' already exists"
@@ -80,8 +80,7 @@ jobs:
       - name: Run MLflow Project with modelling.py
         shell: bash -l {0}
         run: |
-          mlflow run MLProject -e train -P script_name=modelling.py \
-            --experiment-name "Default Experiment"
+          mlflow run MLProject -e train -P script_name=modelling.py             --experiment-name "Default Experiment"
 
       - name: Debug MLflow Runs
         shell: bash -l {0}
