--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,120 +1,132 @@
 name: CI Build and Docker Push
-
-on:
+true:
   push:
     branches:
-      - main
-
+    - main
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
     env:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       DOCKER_REPOSITORY: daffablqs/workflow-ci
-      MLFLOW_TRACKING_URI: file://${{ github.workspace }}/mlruns  # Explicit local tracking URI
-
+      MLFLOW_TRACKING_URI: file://${{ github.workspace }}/mlruns
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v3
+    - name: Setup Miniconda and environment
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        auto-update-conda: true
+        activate-environment: mlflow-env
+        environment-file: MLProject/conda.yaml
+        python-version: 3.11
+        use-mamba: true
+        cache: true
+        channels: conda-forge, defaults
+    - name: Verify Conda Environment Activation
+      shell: bash -l {0}
+      run: 'conda info --envs
 
-      - name: Setup Miniconda and environment
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-update-conda: true
-          activate-environment: mlflow-env
-          environment-file: MLProject/conda.yaml
-          python-version: 3.11
-          use-mamba: true
-          cache: true
-          channels: conda-forge, defaults  
+        echo "Active environment: $CONDA_DEFAULT_ENV"
 
-      - name: Verify Conda Environment Activation
-        shell: bash -l {0}
-        run: |
-          conda info --envs
-          echo "Active environment: $CONDA_DEFAULT_ENV"
-          which python
-          python --version
+        which python
 
-      - name: Install additional Python dependencies
-        shell: bash -l {0}
-        run: pip install dagshub mlflow==2.8.0
+        python --version
 
-      - name: Debug Conda Environment
-        shell: bash -l {0}
-        run: conda list -n mlflow-env
+        '
+    - name: Install additional Python dependencies
+      shell: bash -l {0}
+      run: pip install dagshub mlflow==2.8.0
+    - name: Debug Conda Environment
+      shell: bash -l {0}
+      run: conda list -n mlflow-env
+    - name: Install Missing Conda Packages
+      shell: bash -l {0}
+      run: 'conda install -n mlflow-env numpy matplotlib seaborn --yes
 
-      - name: Install Missing Conda Packages
-        shell: bash -l {0}
-        run: |
-          conda install -n mlflow-env numpy matplotlib seaborn --yes
+        '
+    - name: Debug package versions
+      shell: bash -l {0}
+      run: 'python -c "import numpy; print(''numpy:'', numpy.__version__)"
 
-      - name: Debug package versions
-        shell: bash -l {0}
-        run: |
-          python -c "import numpy; print('numpy:', numpy.__version__)"
-          python -c "import matplotlib; print('matplotlib:', matplotlib.__version__)"
-          python -c "import seaborn; print('seaborn:', seaborn.__version__)"
-          python -c "import mlflow; print('mlflow:', mlflow.__version__)"
-          python -c "import dagshub; print('dagshub:', dagshub.__version__)"
+        python -c "import matplotlib; print(''matplotlib:'', matplotlib.__version__)"
 
-      - name: Debug MLflow Commands and Version
-        shell: bash -l {0}
-        run: |
-          mlflow --version
-          mlflow experiments create --help
-          mlflow experiments search --help
+        python -c "import seaborn; print(''seaborn:'', seaborn.__version__)"
 
-      - name: Initialize MLflow Experiment
-        shell: bash -l {0}
-        run: |
-          echo "Creating MLflow experiment if needed"
-          if ! mlflow experiments search | grep -q "Default Experiment"; then
-            mlflow experiments create --experiment-name "Default Experiment"
-          else
-            echo "Experiment 'Default Experiment' already exists"
-          fi
+        python -c "import mlflow; print(''mlflow:'', mlflow.__version__)"
 
-      - name: Run MLflow Project with modelling.py
-        shell: bash -l {0}
-        run: |
-          mlflow run MLProject -e train -P script_name=modelling.py             --experiment-name "Default Experiment"
+        python -c "import dagshub; print(''dagshub:'', dagshub.__version__)"
 
-      - name: Debug MLflow Runs
-        shell: bash -l {0}
-        run: |
-          mlflow runs list --experiment-name "Default Experiment"
+        '
+    - name: Debug MLflow Commands and Version
+      shell: bash -l {0}
+      run: 'mlflow --version
 
-      - name: Get latest MLflow run_id
-        id: mlflow_run_id
-        shell: bash -l {0}
-        run: |
-          RUN_ID=$(mlflow runs list --experiment-name "Default Experiment" --order-by descending --max-results 1 --output json | jq -r '.[0].run_id')
-          echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
+        mlflow experiments create --help
 
-      - name: Upload artifacts to GitHub
-        uses: actions/upload-artifact@v4
-        with:
-          name: ml-artifacts
-          path: |
-            MLProject/model
-            MLProject/estimator.html
-            MLProject/metric_info.json
-            MLProject/training_confusion_matrix.png
+        mlflow experiments search --help
 
-      - name: Build Docker Image with MLflow
-        shell: bash -l {0}
-        run: mlflow build-docker -p MLProject -t $DOCKER_REPOSITORY:latest
+        '
+    - name: Initialize and Set Active MLflow Experiment
+      shell: bash -l {0}
+      run: 'echo "Setting MLflow experiment ''Default Experiment''"
 
-      - name: Login to DockerHub
-        run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+        mlflow experiments create --experiment-name "Default Experiment" || echo "Experiment
+        already exists"
 
-      - name: Tag Docker Image
-        run: docker tag $DOCKER_REPOSITORY:latest $DOCKER_REPOSITORY:$GITHUB_SHA
+        mlflow experiments set-experiment --experiment-name "Default Experiment"'
+    - name: Verify Active MLflow Experiment
+      shell: bash -l {0}
+      run: mlflow experiments get --experiment-name "Default Experiment"
+    - name: Debug MLflow Active Runs
+      shell: bash -l {0}
+      run: 'echo "MLflow Active Environment Run ID: $(mlflow --environment-run-id)"
 
-      - name: Push Docker Image
-        run: |
-          docker push $DOCKER_REPOSITORY:latest
-          docker push $DOCKER_REPOSITORY:$GITHUB_SHA
+        echo "MLflow Active Run ID: $(mlflow runs get --run-id $(mlflow runs list
+        --experiment-name ''Default Experiment'' --order-by descending --max-results
+        1 --output json | jq -r ''.[0].run_id''))"'
+    - name: Run MLflow Project with modelling.py
+      shell: bash -l {0}
+      run: 'mlflow set-experiment --experiment-name "Default Experiment"
+
+        mlflow run MLProject -e train -P script_name=modelling.py --experiment-name
+        "Default Experiment"'
+    - name: Debug MLflow Runs
+      shell: bash -l {0}
+      run: 'mlflow runs list --experiment-name "Default Experiment"
+
+        '
+    - name: Get latest MLflow run_id
+      id: mlflow_run_id
+      shell: bash -l {0}
+      run: 'RUN_ID=$(mlflow runs list --experiment-name "Default Experiment" --order-by
+        descending --max-results 1 --output json | jq -r ''.[0].run_id'')
+
+        echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
+
+        '
+    - name: Upload artifacts to GitHub
+      uses: actions/upload-artifact@v4
+      with:
+        name: ml-artifacts
+        path: 'MLProject/model
+
+          MLProject/estimator.html
+
+          MLProject/metric_info.json
+
+          MLProject/training_confusion_matrix.png
+
+          '
+    - name: Build Docker Image with MLflow
+      shell: bash -l {0}
+      run: mlflow build-docker -p MLProject -t $DOCKER_REPOSITORY:latest
+    - name: Login to DockerHub
+      run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+    - name: Tag Docker Image
+      run: docker tag $DOCKER_REPOSITORY:latest $DOCKER_REPOSITORY:$GITHUB_SHA
+    - name: Push Docker Image
+      run: 'docker push $DOCKER_REPOSITORY:latest
+
+        docker push $DOCKER_REPOSITORY:$GITHUB_SHA'
