--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,132 +1,128 @@
 name: CI Build and Docker Push
-true:
+
+on:
   push:
     branches:
-    - main
+      - main
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+
     env:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       DOCKER_REPOSITORY: daffablqs/workflow-ci
       MLFLOW_TRACKING_URI: file://${{ github.workspace }}/mlruns
+
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
-    - name: Setup Miniconda and environment
-      uses: conda-incubator/setup-miniconda@v2
-      with:
-        auto-update-conda: true
-        activate-environment: mlflow-env
-        environment-file: MLProject/conda.yaml
-        python-version: 3.11
-        use-mamba: true
-        cache: true
-        channels: conda-forge, defaults
-    - name: Verify Conda Environment Activation
-      shell: bash -l {0}
-      run: 'conda info --envs
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-        echo "Active environment: $CONDA_DEFAULT_ENV"
+      - name: Setup Miniconda and environment
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          activate-environment: mlflow-env
+          environment-file: MLProject/conda.yaml
+          python-version: 3.11
+          use-mamba: true
+          cache: true
+          channels: conda-forge, defaults  
 
-        which python
+      - name: Verify Conda Environment Activation
+        shell: bash -l {0}
+        run: |
+          conda info --envs
+          echo "Active environment: $CONDA_DEFAULT_ENV"
+          which python
+          python --version
 
-        python --version
+      - name: Install additional Python dependencies
+        shell: bash -l {0}
+        run: pip install --upgrade dagshub mlflow  # Removed version pinning
 
-        '
-    - name: Install additional Python dependencies
-      shell: bash -l {0}
-      run: pip install dagshub mlflow==2.8.0
-    - name: Debug Conda Environment
-      shell: bash -l {0}
-      run: conda list -n mlflow-env
-    - name: Install Missing Conda Packages
-      shell: bash -l {0}
-      run: 'conda install -n mlflow-env numpy matplotlib seaborn --yes
+      - name: Debug Conda Environment
+        shell: bash -l {0}
+        run: conda list -n mlflow-env
 
-        '
-    - name: Debug package versions
-      shell: bash -l {0}
-      run: 'python -c "import numpy; print(''numpy:'', numpy.__version__)"
+      - name: Install Missing Conda Packages
+        shell: bash -l {0}
+        run: |
+          conda install -n mlflow-env numpy matplotlib seaborn --yes
 
-        python -c "import matplotlib; print(''matplotlib:'', matplotlib.__version__)"
+      - name: Debug package versions
+        shell: bash -l {0}
+        run: |
+          python -c "import numpy; print('numpy:', numpy.__version__)"
+          python -c "import matplotlib; print('matplotlib:', matplotlib.__version__)"
+          python -c "import seaborn; print('seaborn:', seaborn.__version__)"
+          python -c "import mlflow; print('mlflow:', mlflow.__version__)"
+          python -c "import dagshub; print('dagshub:', dagshub.__version__)"
 
-        python -c "import seaborn; print(''seaborn:'', seaborn.__version__)"
+      - name: Debug MLflow Commands and Version
+        shell: bash -l {0}
+        run: |
+          mlflow --version
+          mlflow experiments create --help
+          mlflow experiments search --help
 
-        python -c "import mlflow; print(''mlflow:'', mlflow.__version__)"
+      # Updated experiment initialization with explicit activation
+      - name: Initialize and Set Active MLflow Experiment
+        shell: bash -l {0}
+        run: |
+          echo "Setting MLflow experiment 'Default Experiment'"
+          mlflow experiments create --experiment-name "Default Experiment" || echo "Experiment already exists"
+          mlflow experiments set-experiment --experiment-name "Default Experiment"
 
-        python -c "import dagshub; print(''dagshub:'', dagshub.__version__)"
+      # Added debug step for active run IDs
+      - name: Debug MLflow Active Runs
+        shell: bash -l {0}
+        run: |
+          echo "MLflow Active Environment Run ID: $(mlflow --environment-run-id)"
+          echo "MLflow Active Run ID: $(mlflow runs list --experiment-name 'Default Experiment' --order-by descending --max-results 1 --output json | jq -r '.[0].run_id')"
 
-        '
-    - name: Debug MLflow Commands and Version
-      shell: bash -l {0}
-      run: 'mlflow --version
+      # Updated MLflow run command with explicit experiment setting
+      - name: Run MLflow Project with modelling.py
+        shell: bash -l {0}
+        run: |
+          mlflow set-experiment --experiment-name "Default Experiment"
+          mlflow run MLProject -e train -P script_name=modelling.py \
+            --experiment-name "Default Experiment"
 
-        mlflow experiments create --help
+      - name: Debug MLflow Runs
+        shell: bash -l {0}
+        run: |
+          mlflow runs list --experiment-name "Default Experiment"
 
-        mlflow experiments search --help
+      - name: Get latest MLflow run_id
+        id: mlflow_run_id
+        shell: bash -l {0}
+        run: |
+          RUN_ID=$(mlflow runs list --experiment-name "Default Experiment" --order-by descending --max-results 1 --output json | jq -r '.[0].run_id')
+          echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
 
-        '
-    - name: Initialize and Set Active MLflow Experiment
-      shell: bash -l {0}
-      run: 'echo "Setting MLflow experiment ''Default Experiment''"
+      - name: Upload artifacts to GitHub
+        uses: actions/upload-artifact@v4
+        with:
+          name: ml-artifacts
+          path: |
+            MLProject/model
+            MLProject/estimator.html
+            MLProject/metric_info.json
+            MLProject/training_confusion_matrix.png
 
-        mlflow experiments create --experiment-name "Default Experiment" || echo "Experiment
-        already exists"
+      - name: Build Docker Image with MLflow
+        shell: bash -l {0}
+        run: mlflow build-docker -p MLProject -t $DOCKER_REPOSITORY:latest
 
-        mlflow experiments set-experiment --experiment-name "Default Experiment"'
-    - name: Verify Active MLflow Experiment
-      shell: bash -l {0}
-      run: mlflow experiments get --experiment-name "Default Experiment"
-    - name: Debug MLflow Active Runs
-      shell: bash -l {0}
-      run: 'echo "MLflow Active Environment Run ID: $(mlflow --environment-run-id)"
+      - name: Login to DockerHub
+        run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
 
-        echo "MLflow Active Run ID: $(mlflow runs get --run-id $(mlflow runs list
-        --experiment-name ''Default Experiment'' --order-by descending --max-results
-        1 --output json | jq -r ''.[0].run_id''))"'
-    - name: Run MLflow Project with modelling.py
-      shell: bash -l {0}
-      run: 'mlflow set-experiment --experiment-name "Default Experiment"
+      - name: Tag Docker Image
+        run: docker tag $DOCKER_REPOSITORY:latest $DOCKER_REPOSITORY:$GITHUB_SHA
 
-        mlflow run MLProject -e train -P script_name=modelling.py --experiment-name
-        "Default Experiment"'
-    - name: Debug MLflow Runs
-      shell: bash -l {0}
-      run: 'mlflow runs list --experiment-name "Default Experiment"
-
-        '
-    - name: Get latest MLflow run_id
-      id: mlflow_run_id
-      shell: bash -l {0}
-      run: 'RUN_ID=$(mlflow runs list --experiment-name "Default Experiment" --order-by
-        descending --max-results 1 --output json | jq -r ''.[0].run_id'')
-
-        echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
-
-        '
-    - name: Upload artifacts to GitHub
-      uses: actions/upload-artifact@v4
-      with:
-        name: ml-artifacts
-        path: 'MLProject/model
-
-          MLProject/estimator.html
-
-          MLProject/metric_info.json
-
-          MLProject/training_confusion_matrix.png
-
-          '
-    - name: Build Docker Image with MLflow
-      shell: bash -l {0}
-      run: mlflow build-docker -p MLProject -t $DOCKER_REPOSITORY:latest
-    - name: Login to DockerHub
-      run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-    - name: Tag Docker Image
-      run: docker tag $DOCKER_REPOSITORY:latest $DOCKER_REPOSITORY:$GITHUB_SHA
-    - name: Push Docker Image
-      run: 'docker push $DOCKER_REPOSITORY:latest
-
-        docker push $DOCKER_REPOSITORY:$GITHUB_SHA'
+      - name: Push Docker Image
+        run: |
+          docker push $DOCKER_REPOSITORY:latest
+          docker push $DOCKER_REPOSITORY:$GITHUB_SHA
