--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,62 @@
+name: MLflow Retrain and Docker CI
+
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+
+env:
+  CONDA_ENV: conda.yaml
+  DOCKER_IMAGE: daffablqs/workflow-ci
+  MLFLOW_PROJECT: .
+  REPO: ${{ github.repository }}
+  BRANCH: main
+
+jobs:
+  retrain:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Setup Miniconda
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        environment-file: ${{ env.CONDA_ENV }}
+        auto-update-conda: true
+        activate-environment: mlflow-env
+        python-version: 3.11
+
+    - name: Install pip dependencies
+      run: |
+        pip install mlflow==2.19.0 dagshub==0.2.10
+
+    - name: Run MLflow project retrain
+      run: |
+        mlflow run ${{ env.MLFLOW_PROJECT }} -e train -P script_name=modelling.py
+
+    - name: Commit and push model artifacts
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add mlruns/
+        git commit -m "Update MLflow retrained model artifacts" || echo "No changes to commit"
+        git push origin ${{ env.BRANCH }}
+
+    - name: Build Docker image
+      run: |
+        mlflow build-docker -p ${{ env.MLFLOW_PROJECT }} -t ${{ env.DOCKER_IMAGE }}
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Push Docker image
+      run: |
+        docker push ${{ env.DOCKER_IMAGE }}
 
