--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  CONDA_ENV: conda.yaml
+  REQUIREMENTS_FILE: Workflow-CI/MLProject/requirements.txt
   DOCKER_IMAGE: daffablqs/workflow-ci
   MLFLOW_PROJECT: .
   REPO: ${{ github.repository }}
@@ -22,16 +22,16 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Setup Miniconda
-      uses: conda-incubator/setup-miniconda@v2
+    - name: Setup Python 3.11
+      uses: actions/setup-python@v4
       with:
-        environment-file: ${{ env.CONDA_ENV }}
-        auto-update-conda: true
-        activate-environment: mlflow-env
         python-version: 3.11
 
-    - name: Install pip dependencies
+    - name: Install pip dependencies from requirements.txt
       run: |
+        python -m pip install --upgrade pip
+        pip install -r ${{ env.REQUIREMENTS_FILE }}
+        # Install MLflow and dagshub as extra dependencies
         pip install mlflow==2.19.0 dagshub==0.2.10
 
     - name: Run MLflow project retrain
