--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Run MLflow project retrain
         run: |
-          mlflow run ${{ env.MLFLOW_PROJECT }} -e main 
+          mlflow run MLProject -e main --no-conda 
 
       - name: Commit and push model artifacts
         run: |
