--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Run MLflow project retrain
         run: |
-          mlflow run Workflow-CI/MLProject -e main  
+          mlflow run MLProject   
 
       - name: Commit and push model artifacts
         run: |
